Migra frontend para React e prepara deploy no Render